updated code info and got rid of placeholders

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,24 +5,23 @@
   </div>
   <div class="row user">
     <div class="four columns">
+      <h4>Code</h4>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-java-plain colored"></i>
+      <i class="devicon-python-plain colored"></i>
+      <p>I enjoy creating websites, so Javascript, HTML, and CSS are probably my more used languages. In school, I teach others how to code Data Structures problems in Java and have pretty good familiarity with its syntax and how the language works. </p>
+    </div>
+    <div class="four columns">
       <h4>Design</h4>
-      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-html5-plain-wordmark"></i> 
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
       <p>My design experience goes here.</p>
     </div>
     <div class="four columns">
-      <h4>Code</h4>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>My coding experience goes here.</p>
-    </div>
-    <div class="four columns">
       <h4>Tools</h4>
-      <i class="devicon-git-plain"></i>
+      <i class="devicon-git-plain colored"></i>
       <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
+      <i class="devicon-vim-plain colored"></i>
       <p>My experience with dev tools goes here.</p>
     </div>
   </div>
