--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,23 +7,10 @@
       <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Project Title </h5>
-      <li> Featured Skills</li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
-    </div>
-  </div>
-  <div class="row user-projects">
-    <div class="six columns">
-      <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
-    </div>
-    <div class="six columns">
-      <h5> Project Title </h5>
-      <ul>
-        <li> Featured Skills</li>
-      </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
+      <h5> Snake - A Pathfinder App </h5>
+      <li> My ReactJS Application </li>
+      <p>This project was inspired by a thought that I had when I supposed to be doing multiple errands in that day. At the time, I wondered if Google Maps had functionality that told me which places to go first in order to maximize my commuting time overall. I realized that this app could potentially be really useful to me, so I decided to make it with new technologies that I hadn't used before. For this project, I decided that I wanted to use ReactJS for the Front-end, and Firebase to host and store the user information.</p>
+      <a class="project-link" href="https://github.com/xChenny/Snake">Check it out</a>
     </div>
   </div>
 </div>
