--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+      <img alt="snake" src="{{ "/assets/img/snake.png" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
       <h5> Snake - A Pathfinder App </h5>
