filled out about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,28 +1,33 @@
 <div class="container">
   <div class="user-details">
-    <h3> My Expertise </h3>
+    <br />
+    <h3> About me </h3>
     <p> {{site.user_description}} </p>
+    <br />
+  <h3>What I know</h3>
   </div>
   <div class="row user">
     <div class="four columns">
-      <h4>Code</h4>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-java-plain colored"></i>
-      <i class="devicon-python-plain colored"></i>
-      <p>I enjoy creating websites, so Javascript, HTML, and CSS are probably my more used languages. In school, I teach others how to code Data Structures problems in Java and have pretty good familiarity with its syntax and how the language works. </p>
-    </div>
-    <div class="four columns">
-      <h4>Design</h4>
+      <h4>Web Development</h4>
       <i class="devicon-html5-plain-wordmark"></i> 
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <p>My design experience goes here.</p>
+      <i class="devicon-react-original colored"></i>
+      <p>I've created web pages using primarily Bootstrap in HTML, but am now starting to create more projects with more modularity using React</p>
     </div>
     <div class="four columns">
-      <h4>Tools</h4>
+      <h4>Code</h4>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-python-plain"></i>
+      <i class="devicon-java-plain colored"></i>
+      <p>I like creating websites, so Javascript, HTML, and CSS are probably my most used languages. In school, I am a Data Structures Teaching assistant, so I teach others how to code Data Structures problems with Java and have pretty good familiarity with its syntax and how the language works. </p>
+    </div>
+    <div class="four columns">
+      <h4>Development Tools</h4>
       <i class="devicon-git-plain colored"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-vim-plain colored"></i>
-      <p>My experience with dev tools goes here.</p>
+      <p>My favorite text editor is Vim, and through Hackathons, I've learned to use the Git tool. As I created my first few websites at hackathons, I learned about the Gulp file, where I made the development of websites easier.</p>
     </div>
   </div>
+  <br />
 </div>
