added domus and updated about section

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,14 +3,23 @@
     <h3> Featured Projects </h3>
   </div>
   <div class="row user-projects">
-    <div class="six columns images">
-      <img alt="snake" src="{{ "/assets/img/snake.png" | prepend: site.baseurl }}" />
+    <div class="six columns">
+      <h5> Domus - The Rentals App </h5>
+      <p>I came up with the idea to make an app so that Renters can pay their landlords conveniently and efficiently after seeing what my parents have to deal with. They frequently have to visit their tenants' homes after their jobs to interact with them despite being really tired. This is mainly because their English is not the best so I thought that for my project at hackRU, I would make an app that could help others in our position. My app would handle work orders and payment all through the application, without a need for interaction if it is not necesary.</p>
+      <a class="project-link" href="https://github.com/xChenny/Domus">Check it out</a>
     </div>
+    <div class="six columns images">
+      <img alt="domus" src="{{ "/assets/img/domus.png" | prepend: site.baseurl }}" />
+    </div>
+  </div>
+  <div class="row user-projects">
     <div class="six columns">
       <h5> Snake - A Pathfinder App </h5>
-      <li> My ReactJS Application </li>
       <p>This project was inspired by a thought that I had when I supposed to be doing multiple errands in that day. At the time, I wondered if Google Maps had functionality that told me which places to go first in order to maximize my commuting time overall. I realized that this app could potentially be really useful to me, so I decided to make it with new technologies that I hadn't used before. For this project, I decided that I wanted to use ReactJS for the Front-end, and Firebase to host and store the user information.</p>
       <a class="project-link" href="https://github.com/xChenny/Snake">Check it out</a>
+    </div>
+    <div class="six columns images">
+      <img alt="snake" src="{{ "/assets/img/snake.png" | prepend: site.baseurl }}" />
     </div>
   </div>
 </div>
