added links to images

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,9 @@
       <a class="project-link" href="https://github.com/xChenny/Domus">Check it out</a>
     </div>
     <div class="six columns images">
-      <img alt="domus" src="{{ "/assets/img/domus.png" | prepend: site.baseurl }}" />
+      <a href="https://github.com/xchenny/Domus">
+        <img alt="domus" src="{{ "/assets/img/domus.png" | prepend: site.baseurl }}" />
+      </a>
     </div>
   </div>
   <div class="row user-projects">
@@ -19,7 +21,9 @@
       <a class="project-link" href="https://github.com/xChenny/Snake">Check it out</a>
     </div>
     <div class="six columns images">
-      <img alt="snake" src="{{ "/assets/img/snake.png" | prepend: site.baseurl }}" />
+      <a href="https://github.com/xchenny/Snake">
+        <img alt="snake" src="{{ "/assets/img/snake.png" | prepend: site.baseurl }}" />
+      </a>
     </div>
   </div>
 </div>
