--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
       <i class="devicon-html5-plain-wordmark"></i> 
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-react-original colored"></i>
-      <p>I've created web pages using primarily Bootstrap in HTML, but am now starting to create more projects with more modularity using React</p>
+      <p>I am most comfortable with using ReactJS for Frontend-Development. I learned to use Redux on-the-job during one of my work experiences and I really like pairing React with Redux. I've worked with mySQL Databases as well as MongoDB. I equally prefer NodeJS/Express or Flask with Python for Backend/API development.</p>
     </div>
     <div class="four columns">
       <h4>Code</h4>
