--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,13 +6,16 @@
     <div class="six columns">
       <h5> LocalLending - The "Craigslist" for Lending Items</h5>
       <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. The idea for this came about when my groupmates and I wanted to create a project that could solve a big problem that we had in today's consumer-driven market. Often, we find ourselves needing a certain tool or item only once, but we don't have any other choice other than just buying it. The problem lies on how we only used the tool or item once before letting it sit there and eventually throwing it out. Locallending was a project that meant to solve this problem.</p>
-      <a class="project-link" href="https://github.com/BeamGroup/locallending">Check it out</a>
+      <a class="project-link" href="ww1.bensommer.net">Check it out</a>
+      <a class="project-link" href="https://github.com/BeamGroup/locallending">Check it out on Github</a>
     </div>
     <div class="six columns images">
       <a href="https://github.com/BeamGroup/locallending">
         <img alt="locallending" src="{{ "/assets/img/locallending.png" | prepend: site.baseurl }}" />
       </a>
     </div>
+  </div>
+  <div class="row user-projects">
     <div class="six columns">
       <h5> Domus - The Rentals App </h5>
       <p>I came up with the idea to make an app so that Renters can pay their landlords conveniently and efficiently after seeing what my parents have to deal with. They frequently have to visit their tenants' homes after their jobs to interact with them despite being really tired. This is mainly because their English is not the best so I thought that for my project at hackRU, I would make an app that could help others in our position. My app would handle work orders and payment all through the application, without a need for interaction if it is not necesary.</p>
