--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,6 +13,8 @@
         <img alt="locallending" src="{{ "/assets/img/locallending.png" | prepend: site.baseurl }}" />
       </a>
     </div>
+  </div>
+  <div class="row user-projects">
     <div class="six columns">
       <h5> Domus - The Rentals App </h5>
       <p>I came up with the idea to make an app so that Renters can pay their landlords conveniently and efficiently after seeing what my parents have to deal with. They frequently have to visit their tenants' homes after their jobs to interact with them despite being really tired. This is mainly because their English is not the best so I thought that for my project at hackRU, I would make an app that could help others in our position. My app would handle work orders and payment all through the application, without a need for interaction if it is not necesary.</p>
