align buttons to the same line

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,8 +6,10 @@
     <div class="six columns">
       <h5> LocalLending - The "Craigslist" for Lending Items</h5>
       <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. The idea for this came about when my groupmates and I wanted to create a project that could solve a big problem that we had in today's consumer-driven market. Often, we find ourselves needing a certain tool or item only once, but we don't have any other choice other than just buying it. The problem lies on how we only used the tool or item once before letting it sit there and eventually throwing it out. Locallending was a project that meant to solve this problem.</p>
-      <a class="project-link" href="http://ec2-52-90-94-38.compute-1.amazonaws.com/">Check it out</a>
-      <a class="project-link" href="https://github.com/BeamGroup/locallending">Check it out on Github</a>
+      <div>
+        <a class="project-link" href="http://ec2-52-90-94-38.compute-1.amazonaws.com/">Check it out</a>
+        <a class="project-link" href="https://github.com/BeamGroup/locallending">Check it out on Github</a>
+      </div>
     </div>
     <div class="six columns images">
       <a href="https://github.com/BeamGroup/locallending">
