--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
       <a class="project-link" href="https://github.com/BeamGroup/locallending">Github Repository</a>
     </div>
     <div class="six columns images">
-      <a href="https://github.com/BeamGroup/locallending">
+      <a href="http://ec2-52-90-94-38.compute-1.amazonaws.com/">
         <img alt="locallending" src="{{ "/assets/img/locallending.png" | prepend: site.baseurl }}" />
       </a>
     </div>
