added resume and got rid of skills cuz it looked bad

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,8 +4,9 @@
     <h3> About me </h3>
     <p> {{site.user_description}} </p>
     <br />
-  <h3>What I know</h3>
+  <!-- <h3>What I know</h3> -->
   </div>
+  <!--
   <div class="row user">
     <div class="four columns">
       <h4>Web Development</h4>
@@ -26,5 +27,6 @@
       <i class="devicon-vim-plain colored"></i>
     </div>
   </div>
+  -->
   <br />
 </div>
