--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
       </div>
       <a class="link" href="#about" data-scroll>About Me</a>
       <a class="link" href="#projects" data-scroll>Projects</a>
+      <a class="link" href="/assets/pdf/resume_cv.pdf" download="andrew-chen-resume.pdf">My Resume</a>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
