--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,8 +12,8 @@
   <div class="row user-projects">
     <div class="six columns">
       <h5> Scramble - A Fast-paced Games Platform</h5>
-      <p>A friend and I made this project at HackBinghamton. This is a web application that uses socket.io to communicate between the server and between the two players. Currently, this project </p>
-      <a class="project-link locallending" href="http://scramble-demo.mybluemix.net/">Check it out!</a>
+      <p>This project was created at the hackathon, HackBinghamton. This is a web application that uses socket.io to communicate between the server and between the two players.</p>
+      <!--<a class="project-link locallending" href="http://scramble-demo.mybluemix.net/">Check it out!</a>-->
       <a class="project-link locallending" href="https://github.com/robherley/scramble">Github</a>
     </div>
     <div class="six columns images">
@@ -26,7 +26,7 @@
     <div class="six columns">
       <h5> LocalLending - The "Craigslist" for Lending Items</h5>
       <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. The idea for this came about when my groupmates and I wanted to create a project that could solve a big problem that we had in today's consumer-driven market. Often, we find ourselves needing a certain tool or item only once, but we don't have any other choice other than just buying it. The problem lies on how we only used the tool or item once before letting it sit there and eventually throwing it out. Locallending was a project that meant to solve this problem.</p>
-      <a class="project-link locallending" href="http://ec2-52-90-94-38.compute-1.amazonaws.com">Check it out!</a>
+      <a class="project-link locallending" href="http://locallending.org">Check it out!</a>
       <a class="project-link locallending" href="https://github.com/BeamGroup/locallending">Github</a>
     </div>
     <div class="six columns images">
