--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -25,7 +25,7 @@
   <div class="row user-projects">
     <div class="six columns">
       <h5> LocalLending - The "Craigslist" for Lending Items</h5>
-      <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. The idea for this came about when my groupmates and I wanted to create a project that could solve a big problem that we had in today's consumer-driven market. Often, we find ourselves needing a certain tool or item only once, but we don't have any other choice other than just buying it. The problem lies on how we only used the tool or item once before letting it sit there and eventually throwing it out. Locallending was a project that meant to solve this problem.</p>
+      <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. It allows users to browse for items that shouldn't need to buy. This application serves to help us better utilize our "things" and lets our neighbors find the items they need without the need to pay for a new one. Check the application out today!</p>
       <a class="project-link locallending" href="http://locallending.org">Check it out!</a>
       <a class="project-link locallending" href="https://github.com/BeamGroup/locallending">Github</a>
     </div>
@@ -38,7 +38,7 @@
   <div class="row user-projects">
     <div class="six columns">
       <h5> Domus - The Rentals App </h5>
-      <p>I came up with the idea to make an app so that Renters can pay their landlords conveniently and efficiently after seeing what my parents have to deal with. They frequently have to visit their tenants' homes after their jobs to interact with them despite being really tired. This is mainly because their English is not the best so I thought that for my project at hackRU, I would make an app that could help others in our position. My app would handle work orders and payment all through the application, without a need for interaction if it is not necesary.</p>
+      <p>This project serves to help you interact with your landlord or tenant without all of the hassle of meeting in person, or setting up a call. It is a one-stop-stop for all interactions between tenants and landlords.</p>
       <a class="project-link" href="https://github.com/xChenny/Domus">Github</a>
     </div>
     <div class="six columns images">
@@ -50,7 +50,7 @@
   <div class="row user-projects">
     <div class="six columns">
       <h5> Snake - A Pathfinder App </h5>
-      <p>This project was inspired by a thought that I had when I supposed to be doing multiple errands in that day. At the time, I wondered if Google Maps had functionality that told me which places to go first in order to maximize my commuting time overall. I realized that this app could potentially be really useful to me, so I decided to make it with new technologies that I hadn't used before. For this project, I decided that I wanted to use ReactJS and the Google Maps API.</p>
+      <p>Ever been in a situation where you had many errands to run, all in different locations? Worry no more! Snake is here to solve your problem. Snake is an application meant to help you find the most efficient way to go through all of your points of interest. Check out the source code below.</p>
       <a class="project-link" href="https://github.com/xChenny/Snake">Github</a>
     </div>
     <div class="six columns images">
