--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
       <a class="project-link locallending" href="https://github.com/robherley/scramble">Github</a>
     </div>
     <div class="six columns images">
-      <a href="locallending.org">
+      <a href="http://locallending.org">
         <img alt="locallending" src="{{ "/assets/img/scramble.png" | prepend: site.baseurl }}" />
       </a>
     </div>
@@ -30,7 +30,7 @@
       <a class="project-link locallending" href="https://github.com/BeamGroup/locallending">Github</a>
     </div>
     <div class="six columns images">
-      <a href="locallending.org">
+      <a href="http://locallending.org">
         <img alt="locallending" src="{{ "/assets/img/locallending.png" | prepend: site.baseurl }}" />
       </a>
     </div>
