--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
       <a class="project-link locallending" href="https://github.com/robherley/scramble">Github</a>
     </div>
     <div class="six columns images">
-      <a href="https://github.com/robherley/scramble">
+      <a href="github.com/robherley/scramble">
         <img alt="locallending" src="{{ "/assets/img/scramble.png" | prepend: site.baseurl }}" />
       </a>
     </div>
