--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,6 +11,19 @@
   </div>
   <div class="row user-projects">
     <div class="six columns">
+      <h5> CodeJS - An online cloud-based code editing platform</h5>
+      <p>This was my class project for CS546 - Web Programming. This is a site that is similar to Google Drive in that it utilizes cloud technologies to allow users to have the freedom to code anywhere they want on any computer.</p>
+      <a class="project-link" href="https://github.com/xChenny/CS546-Final-Project">Check it out!</a>
+      <a class="project-link" href="https://github.com/xChenny/CS546-Final-Project">Github</a>
+    </div>
+    <div class="six columns images">
+      <a href="https://github.com/xChenny/CS546-Final-Project">
+        <img alt="codejs" src="{{ "/assets/img/codejs.png" | prepend: site.baseurl }}" />
+      </a>
+    </div>
+  </div>
+  <div class="row user-projects">
+    <div class="six columns">
       <h5> Scramble - A Fast-paced Games Platform</h5>
       <p>This project was created at the hackathon, HackBinghamton. This is a web application that uses socket.io to communicate between the server and between the two players.</p>
       <!--<a class="project-link locallending" href="http://scramble-demo.mybluemix.net/">Check it out!</a>-->
