Made the Codejs image a link to the hosted site as well

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
       <a class="project-link" href="https://github.com/xChenny/CS546-Final-Project">Github</a>
     </div>
     <div class="six columns images">
-      <a href="https://github.com/xChenny/CS546-Final-Project">
+      <a href="codejs-editor.appspot.com">
         <img alt="codejs" src="{{ "/assets/img/codejs.png" | prepend: site.baseurl }}" />
       </a>
     </div>
