--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,11 +13,11 @@
     <div class="six columns">
       <h5> CodeJS - An online cloud-based code editing platform</h5>
       <p>This was my class project for CS546 - Web Programming. This is a site that is similar to Google Drive in that it utilizes cloud technologies to allow users to have the freedom to code anywhere they want on any computer.</p>
-      <a class="project-link" href="codejs-editor.appspot.com">Check it out!</a>
+      <a class="project-link" href="https://codejs-editor.appspot.com">Check it out!</a>
       <a class="project-link" href="https://github.com/xChenny/CS546-Final-Project">Github</a>
     </div>
     <div class="six columns images">
-      <a href="codejs-editor.appspot.com">
+      <a href="https://codejs-editor.appspot.com">
         <img alt="codejs" src="{{ "/assets/img/codejs.png" | prepend: site.baseurl }}" />
       </a>
     </div>
