fixed wording and updated resume

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,6 @@
     <div class="six columns">
       <h5> Scramble - A Fast-paced Games Platform</h5>
       <p>This project was created at the hackathon, HackBinghamton. This is a web application that uses socket.io to communicate between the server and between the two players.</p>
-      <!--<a class="project-link locallending" href="http://scramble-demo.mybluemix.net/">Check it out!</a>-->
       <a class="project-link locallending" href="https://github.com/robherley/scramble">Github</a>
     </div>
     <div class="six columns images">
@@ -38,8 +37,7 @@
   <div class="row user-projects">
     <div class="six columns">
       <h5> LocalLending - The "Craigslist" for Lending Items</h5>
-      <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. It allows users to browse for items that shouldn't need to buy. This application serves to help us better utilize our "things" and lets our neighbors find the items they need without the need to pay for a new one. Check the application out today!</p>
-      <a class="project-link locallending" href="http://locallending.org">Check it out!</a>
+      <p>This project came about at InventYU, a hackathon hosted by Yeshiva University in New York City. It allows users to browse for items that they shouldn't need to buy. This application serves to help us better utilize our "things" and lets our neighbors find the items they need without the need to pay for a new one. Check the application out today!</p>
       <a class="project-link locallending" href="https://github.com/BeamGroup/locallending">Github</a>
     </div>
     <div class="six columns images">
